# wasm-component-demo

./: README.md  app.sh
actix-app/: Cargo.toml
actix-app/src/: main.rs
adder/src/: lib.rs
calculator/wit/: world.wit
cargo-component-demo/: Cargo.toml  README.md  justfile
cargo-component-demo-v2/: README.md  justfile
cargo-component-demo-v2/adder/: Cargo.toml
cargo-component-demo-v2/adder/src/: bindings.rs  lib.rs
cargo-component-demo-v2/calculator/: Cargo.toml
cargo-component-demo-v2/cli-app/: Cargo.toml
cargo-component-demo-v2/cli-app/src/: bindings.rs  main.rs
cargo-component-demo-v2/cli-app/wit/: world.wit
cargo-component-demo-v2/proxy-app/: Cargo.toml
cargo-component-demo-v2/proxy-app/src/: bindings.rs  lib.rs
cargo-component-demo-v2/proxy-app/wit/: deps.toml  world.wit
cargo-component-demo/adder/: Cargo.toml
cargo-component-demo/calculator/: Cargo.toml
cargo-component-demo/cli-app/: Cargo.toml
cargo-component-demo/cli-app/src/: main.rs
cargo-component-demo/cli-app/wit/: world.wit
cargo-component-demo/express-app/: .gitignore  index.js
cargo-component-demo/node-app/: index.js  package.json
cargo-component-demo/rust-app/: Cargo.toml
cli-app/src/: main.rs
divider-rust-app/src/: main.rs
divider-rust-app/wit/: world.wit
express-app/: package.json
express-app/public/: script.js
js-app/: index.js  package-lock.json  package.json
js-component-demo/: Cargo.toml  README.md  justfile
js-component-demo/divider-rust-app/: Cargo.toml
js-component-demo/js-app/: .gitignore
js-component-demo/js-divider/: .gitignore
js-divider/: .gitignore  index.js  package-lock.json  package.json  test.js
rust-app/: Cargo.toml
rust-app/src/: main.rs
spin-microservice-demo/: .gitignore  README.md  spin.toml
spin-microservice-demo/go-adder/: go.mod  main.go
spin-microservice-demo/go-calculator/: go.mod  main.go
spin-microservice-demo/rs-adder/: Cargo.toml
spin-microservice-demo/rs-calculator/: Cargo.toml
spin-microservice-demo/ts-adder/: package-lock.json  package.json
spin-microservice-demo/ts-calculator/: package-lock.json  package.json
(+13 files in other folders)
