[package]
name = "cli-app"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.33.0", features = ["bitflags"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:cli-app"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"component:calculator" = { path = "../calculator/wit" }
"component:adder" = { path = "../adder/wit" }

