[package]
name = "cli-app"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:cli-app"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"component:adder" = { path = "../adder/wit" }
"component:calculator" = { path = "../calculator/wit" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.4.1"
